--- a/po/ChangeLog
+++ b/po/ChangeLog
@@ -1,3 +1,8 @@
+2004-01-20  Gustavo Maciel Dias Vieira  <gdvieira@zaz.com.br>
+
+	* pt_BR.po: Updated Brazilian Portuguese translation done by
+	Estêvão Samuel Procópio <tevaum@ig.com.br>.
+
 2004-01-19 Hasbullah Bin Pit <sebol@my-penguin.org>
 
 	* ms.po: Updated Malay translation.
