--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -5,110 +5,98 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp 2.0\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
-"PO-Revision-Date: 2003-10-01 14:14-0400\n"
-"Last-Translator: Evandro Fernandes Giovanini <evandrofg@ig.com.br>\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-01-20 13:44-0500\n"
+"PO-Revision-Date: 2004-01-20 13:45-0500\n"
+"Last-Translator: Estêvão Samuel Procópio <tevaum@ig.com.br>\n"
 "Language-Team: Brazilian Portuguese <gnome-l10n-br@listas.cipsga.org.br>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
-#, fuzzy
 msgid "Applets"
-msgstr "Aplicações"
+msgstr "Applets"
 
 #: data/toc.xml.in.h:2 src/yelp-man.c:429
 msgid "Applications"
 msgstr "Aplicações"
 
 #: data/toc.xml.in.h:3
-#, fuzzy
 msgid "Desktop"
-msgstr "GNOME - Ambiente"
+msgstr "Área de Trabalho"
 
 #: data/toc.xml.in.h:4 src/yelp-man.c:434
 msgid "Development"
 msgstr "Desenvolvimento"
 
 #: data/toc.xml.in.h:5
-#, fuzzy
 msgid "Development Environments"
-msgstr "Desenvolvimento"
+msgstr "Ambientes de Desenvolvimento"
 
 #: data/toc.xml.in.h:6
-#, fuzzy
 msgid "Development Tools"
-msgstr "Desenvolvimento"
+msgstr "Ferramentas de Desenvolvimento"
 
-#: data/toc.xml.in.h:7
-#, fuzzy
+#: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:35
 msgid "Editors"
-msgstr "/_Editar"
+msgstr "Editores"
 
 #: data/toc.xml.in.h:8
-#, fuzzy
 msgid "Education Applications"
-msgstr "Aplicações"
+msgstr "Aplicações Educativas"
 
 #: data/toc.xml.in.h:9
 msgid "Games and Entertainment"
-msgstr ""
+msgstr "Jogos e Entretenimento"
 
 #: data/toc.xml.in.h:10
 msgid "General"
-msgstr ""
+msgstr "Geral"
 
 #: data/toc.xml.in.h:11
 msgid "Help Contents"
 msgstr "Conteúdo da Ajuda"
 
 #: data/toc.xml.in.h:12
-#, fuzzy
 msgid "Internet Applications"
-msgstr "Aplicações"
+msgstr "Aplicações para Internet"
 
 #: data/toc.xml.in.h:13
 msgid "KDE"
-msgstr ""
+msgstr "KDE"
 
 #: data/toc.xml.in.h:14
-#, fuzzy
 msgid "Kernels"
-msgstr "Rotinas do Kernel"
+msgstr "Kernels"
 
 #: data/toc.xml.in.h:15
-#, fuzzy
 msgid "Multimedia Applications"
-msgstr "Aplicações"
+msgstr "Aplicações Multimídia"
 
 #: data/toc.xml.in.h:16
 msgid "Office and Productivity Applications"
-msgstr ""
+msgstr "Aplicações de Escritório e Produtividade"
 
 #: data/toc.xml.in.h:17
-#, fuzzy
 msgid "Scientific Applications"
-msgstr "Aplicações"
+msgstr "Aplicações Científicas"
 
 #: data/toc.xml.in.h:18
 msgid "Securities"
-msgstr ""
+msgstr "Segurança"
 
 #: data/toc.xml.in.h:19
-#, fuzzy
 msgid "System"
-msgstr "Chamadas de Sistema"
+msgstr "Sistema"
 
 #: data/toc.xml.in.h:20
 msgid "Utilities"
-msgstr ""
+msgstr "Utilitários"
 
 #: data/toc.xml.in.h:21
-#, fuzzy
 msgid "X Applications"
-msgstr "Aplicações"
+msgstr "Aplicações X"
 
 #: data/ui/yelp.glade.h:1
 msgid "*"
@@ -116,19 +104,19 @@ msgstr "*"
 
 #: data/ui/yelp.glade.h:2
 msgid "C_ase sensitive"
-msgstr ""
+msgstr "Considerar m_aiúsculas/minúsculas"
 
 #: data/ui/yelp.glade.h:3
 msgid "Find"
-msgstr ""
+msgstr "Localizar"
 
 #: data/ui/yelp.glade.h:4
 msgid "_Find: "
-msgstr ""
+msgstr "_Localizar"
 
 #: data/ui/yelp.glade.h:5
 msgid "_Next"
-msgstr "_Seguinte"
+msgstr "Pró_ximo"
 
 #: data/ui/yelp.glade.h:6
 msgid "_Previous"
@@ -136,7 +124,7 @@ msgstr "_Anterior"
 
 #: data/ui/yelp.glade.h:7
 msgid "_Wrap around"
-msgstr ""
+msgstr "_Voltar ao Início"
 
 #: src/GNOME_Yelp.server.in.h:1
 msgid "Yelp"
@@ -146,50 +134,47 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Fábrica Yelp"
 
-#: src/yelp-db-pager.c:424
+#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
-msgstr ""
+msgstr "Atributo href não encontrado em yelp:document"
 
-#: src/yelp-db-pager.c:439
+#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
-msgstr ""
+msgstr "Memória insuficiente"
 
-#: src/yelp-db-pager.c:616
+#: src/yelp-db-pager.c:627 src/yelp-man-pager.c:370
 msgid "Titlepage"
-msgstr ""
+msgstr "Página de Título"
 
-#: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
-#, fuzzy
+#: src/yelp-db-pager.c:629 stylesheets/l10n.xml.in.h:29
+#: src/yelp-man-pager.c:372
 msgid "Contents"
-msgstr "Conteúdo da Ajuda"
+msgstr "Conteúdo"
 
-#: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
+#: src/yelp-db-pager.c:647 stylesheets/l10n.xml.in.h:67
+#: src/yelp-man-pager.c:390
 msgid "Unknown"
-msgstr ""
+msgstr "Desconhecido"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "O documento '%s' não existe"
+msgstr "O documento selecionado não pode ser aberto"
 
 #: src/yelp-error.c:52
-#, fuzzy
 msgid "The selected page could not be found in this document."
-msgstr "O documento '%s' não existe"
+msgstr "A página selecionada não foi encontrada nesse documento."
 
 #: src/yelp-error.c:58
-#, fuzzy
 msgid "The table of contents could not be read."
-msgstr "O documento '%s' não existe"
+msgstr "A tabela de conteúdos não pode ser lida."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Documentos DocBook SGML não são mais suportados."
 
 #: src/yelp-error.c:70
-#, fuzzy
 msgid "The selected file could not be read."
-msgstr "O documento '%s' não existe"
+msgstr "O arquivo selecionado não pode ser lido"
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -266,23 +251,27 @@ msgid "System Administration"
 msgstr "Administração do Sistema"
 
 #: src/yelp-pager.c:118
-#, fuzzy
 msgid "Document URI"
-msgstr "Documentos"
+msgstr "URI do Documento"
 
 #: src/yelp-pager.c:119
 msgid "The URI of the document to be processed"
-msgstr ""
+msgstr "O URI do documento a ser processado"
 
 #: src/yelp-toc-pager.c:266
 msgid "YelpTocPager: Pause count is negative."
-msgstr ""
+msgstr "YelpTocPager: Contador de pausa é negativo"
 
-#: src/yelp-toc-pager.c:880
+#: src/yelp-toc-pager.c:486
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "Não foi possível carregar arquivo OMF: '%s'."
+
+#: src/yelp-toc-pager.c:892
 msgid "Categories"
 msgstr "Categorias"
 
-#: src/yelp-toc-pager.c:894
+#: src/yelp-toc-pager.c:906
 msgid "Documents"
 msgstr "Documentos"
 
@@ -292,30 +281,27 @@ msgstr "/_Arquivo"
 
 #: src/yelp-window.c:230
 msgid "/File/_New window"
-msgstr "/Arquivo/_Nova Janela"
+msgstr "/Arquivo/_Nova janela"
 
 #: src/yelp-window.c:233
 msgid "/File/_Close window"
-msgstr "/Arquivo/_Fechar Janela"
+msgstr "/Arquivo/_Fechar janela"
 
 #: src/yelp-window.c:237
 msgid "/_Edit"
 msgstr "/_Editar"
 
 #: src/yelp-window.c:238
-#, fuzzy
 msgid "/Edit/_Find..."
 msgstr "/Editar/_Procurar na página..."
 
 #: src/yelp-window.c:241
-#, fuzzy
 msgid "/Edit/Find Ne_xt"
-msgstr "/Editar/Procurar _novamente"
+msgstr "/Editar/Procurar _Próximo"
 
 #: src/yelp-window.c:244
-#, fuzzy
 msgid "/Edit/Find Pre_vious"
-msgstr "/Editar/Procurar _novamente"
+msgstr "/Editar/Procurar _Anterior"
 
 #: src/yelp-window.c:248
 msgid "/_Go"
@@ -323,39 +309,35 @@ msgstr "/_Ir"
 
 #: src/yelp-window.c:249
 msgid "/Go/_Back"
-msgstr "/Ir/_Voltar"
+msgstr "/Ir/_Anterior"
 
 #: src/yelp-window.c:252
 msgid "/Go/_Forward"
-msgstr "/Ir/_Avançar"
+msgstr "/Ir/_Próximo"
 
 #: src/yelp-window.c:255
 msgid "/Go/_Home"
 msgstr "/Ir/_Início"
 
 #: src/yelp-window.c:258
-#, fuzzy
 msgid "/Go/"
 msgstr "/_Ir"
 
 #: src/yelp-window.c:259
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "_Anterior"
+msgstr "/Ir/Página _Anterior"
 
 #: src/yelp-window.c:262
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Ir/Í_ndice"
+msgstr "/Ir/_Próxima Página"
 
 #: src/yelp-window.c:265
-#, fuzzy
 msgid "/Go/_Contents"
-msgstr "Conteúdo da Ajuda"
+msgstr "/Ir/_Conteúdo da Ajuda"
 
 #: src/yelp-window.c:269
 msgid "/_Help"
-msgstr "/A_juda"
+msgstr "/Aj_uda"
 
 #: src/yelp-window.c:270
 msgid "/Help/_About"
@@ -365,7 +347,7 @@ msgstr "Ajuda/_Sobre"
 msgid "Help Browser"
 msgstr "Navegador de Ajuda"
 
-#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:53
+#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:59
 msgid "Section"
 msgstr "Seção"
 
@@ -401,7 +383,9 @@ msgstr "Carregando..."
 #. * will shop up in the "about" box
 #: src/yelp-window.c:1228
 msgid "translator_credits"
-msgstr "Evandro Fernandes Giovanini <evandrofg@ig.com.br>"
+msgstr ""
+"Evandro Fernandes Giovanini <evandrofg@ig.com.br>\n"
+"Estêvão Samuel Procópio <tevaum@ig.com.br>"
 
 #: src/yelp-window.c:1233
 msgid "A Help Browser for GNOME"
@@ -409,244 +393,259 @@ msgstr "Um Navegador de Ajuda para o GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Bibliography"
-msgstr ""
+msgstr "Sobre Esta Bibliografia"
 
 #: stylesheets/l10n.xml.in.h:6
 msgid "About This Book"
-msgstr ""
+msgstr "Sobre Este Livro"
 
 #: stylesheets/l10n.xml.in.h:7
 msgid "About This Chapter"
-msgstr ""
+msgstr "Sobre Este Capítulo"
 
 #: stylesheets/l10n.xml.in.h:8
 msgid "About This Entry"
-msgstr ""
+msgstr "Sobre Esta Entrada"
 
 #: stylesheets/l10n.xml.in.h:9
 msgid "About This Glossary"
-msgstr ""
+msgstr "Sobre Este Glossário"
 
 #: stylesheets/l10n.xml.in.h:10
 msgid "About This Index"
-msgstr ""
+msgstr "Sobre Este Índice"
 
 #: stylesheets/l10n.xml.in.h:11
 msgid "About This Part"
-msgstr ""
+msgstr "Sobre Esta Parte"
 
 #: stylesheets/l10n.xml.in.h:12
 msgid "About This Preface"
-msgstr ""
+msgstr "Sobre Este Prefácio"
 
 #: stylesheets/l10n.xml.in.h:13
 msgid "About This Reference"
-msgstr ""
+msgstr "Sobre Esta Referência"
 
 #: stylesheets/l10n.xml.in.h:14
 msgid "About This Section"
-msgstr ""
+msgstr "Sobre Esta Seção"
 
 #: stylesheets/l10n.xml.in.h:15
 msgid "About This Set"
-msgstr ""
+msgstr "Sobre Este Conjunto"
 
 #: stylesheets/l10n.xml.in.h:16
-#, fuzzy
 msgid "Affiliation"
-msgstr "Aplicações"
+msgstr "Afiliação"
 
 #: stylesheets/l10n.xml.in.h:17
 msgid "Appendix"
-msgstr ""
+msgstr "Apêndice"
 
 #: stylesheets/l10n.xml.in.h:18
 msgid "Article"
-msgstr ""
+msgstr "Artigo"
 
 #: stylesheets/l10n.xml.in.h:19
 msgid "Audience"
-msgstr ""
+msgstr "Público"
 
 #: stylesheets/l10n.xml.in.h:20
 msgid "Author"
-msgstr ""
+msgstr "Autor"
 
 #: stylesheets/l10n.xml.in.h:21
-msgid "Bibliography"
-msgstr ""
+msgid "Authors"
+msgstr "Autores"
 
 #: stylesheets/l10n.xml.in.h:22
-msgid "Book"
-msgstr ""
+msgid "Bibliography"
+msgstr "Bibliografia"
 
 #: stylesheets/l10n.xml.in.h:23
-msgid "Caution"
-msgstr ""
+msgid "Book"
+msgstr "Livro"
 
 #: stylesheets/l10n.xml.in.h:24
-msgid "Chapter"
-msgstr ""
+msgid "Caution"
+msgstr "Cuidado"
 
 #: stylesheets/l10n.xml.in.h:25
-msgid "Collaborator"
-msgstr ""
+msgid "Chapter"
+msgstr "Capítulo"
 
 #: stylesheets/l10n.xml.in.h:26
-msgid "Colophon"
-msgstr ""
+msgid "Collaborator"
+msgstr "Colaborador"
+
+#: stylesheets/l10n.xml.in.h:27
+msgid "Collaborators"
+msgstr "Colaboradores"
 
 #: stylesheets/l10n.xml.in.h:28
-msgid "Copyright"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:29
-msgid "Date"
-msgstr ""
+msgid "Colophon"
+msgstr "Colophon"
 
 #: stylesheets/l10n.xml.in.h:30
-#, fuzzy
-msgid "Dedication"
-msgstr "Seção"
+msgid "Copyright"
+msgstr "Copyright"
 
 #: stylesheets/l10n.xml.in.h:31
-#, fuzzy
-msgid "Editor"
-msgstr "/_Editar"
+msgid "Copyrights"
+msgstr "Copyrights"
 
 #: stylesheets/l10n.xml.in.h:32
-msgid "Email"
-msgstr ""
+msgid "Date"
+msgstr "Data"
 
 #: stylesheets/l10n.xml.in.h:33
-msgid "Example"
-msgstr ""
+msgid "Dedication"
+msgstr "Dedicatória"
 
 #: stylesheets/l10n.xml.in.h:34
-msgid "Figure"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:35
-msgid "Glossary"
-msgstr ""
+msgid "Editor"
+msgstr "Editor"
 
 #: stylesheets/l10n.xml.in.h:36
-msgid "Important"
-msgstr ""
+msgid "Email"
+msgstr "Email"
 
 #: stylesheets/l10n.xml.in.h:37
+msgid "Example"
+msgstr "Exemplo"
+
+#: stylesheets/l10n.xml.in.h:38
+msgid "Figure"
+msgstr "Figura"
+
+#: stylesheets/l10n.xml.in.h:39
+msgid "Glossary"
+msgstr "Glossário"
+
+#: stylesheets/l10n.xml.in.h:40
+msgid "Important"
+msgstr "Importante"
+
+#: stylesheets/l10n.xml.in.h:41
 msgid "Index"
 msgstr "Índice"
 
-#: stylesheets/l10n.xml.in.h:38
-msgid "Legal Notice"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:39
-msgid "Level"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:40
-msgid "Message Audience"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:41
-msgid "Message Level"
-msgstr ""
-
 #: stylesheets/l10n.xml.in.h:42
-msgid "Message Origin"
-msgstr ""
+msgid "Legal Notice"
+msgstr "Observação Legal"
 
 #: stylesheets/l10n.xml.in.h:43
-msgid "Note"
-msgstr ""
+msgid "Level"
+msgstr "Nível"
 
 #: stylesheets/l10n.xml.in.h:44
-msgid "Origin"
-msgstr ""
+msgid "Message Audience"
+msgstr "Público da Mensagem"
 
 #: stylesheets/l10n.xml.in.h:45
-msgid "Other Contributor"
-msgstr ""
+msgid "Message Level"
+msgstr "Nível da Mensagem"
 
 #: stylesheets/l10n.xml.in.h:46
-msgid "Part"
-msgstr ""
+msgid "Message Origin"
+msgstr "Origem da Mensagem"
 
 #: stylesheets/l10n.xml.in.h:47
-msgid "Preface"
-msgstr ""
+msgid "Note"
+msgstr "Nota"
 
 #: stylesheets/l10n.xml.in.h:48
-msgid "Publisher"
-msgstr ""
+msgid "Origin"
+msgstr "Origem"
 
 #: stylesheets/l10n.xml.in.h:49
-msgid "Reference"
-msgstr ""
+msgid "Other Contributor"
+msgstr "Outro Contribuinte"
 
 #: stylesheets/l10n.xml.in.h:50
-msgid "Reference Entry"
-msgstr ""
+msgid "Other Contributors"
+msgstr "Outros Contribuintes"
 
 #: stylesheets/l10n.xml.in.h:51
-msgid "Reference Section"
-msgstr ""
+msgid "Part"
+msgstr "Parte"
 
 #: stylesheets/l10n.xml.in.h:52
-msgid "Revision History"
-msgstr ""
+msgid "Preface"
+msgstr "Prefácio"
+
+#: stylesheets/l10n.xml.in.h:53
+msgid "Publisher"
+msgstr "Editora"
 
 #: stylesheets/l10n.xml.in.h:54
-msgid "See"
-msgstr ""
+msgid "Publishers"
+msgstr "Editoras"
 
 #: stylesheets/l10n.xml.in.h:55
-msgid "See Also"
-msgstr ""
+msgid "Reference"
+msgstr "Referência"
 
 #: stylesheets/l10n.xml.in.h:56
-#, fuzzy
-msgid "Set Index"
-msgstr "Índice"
+msgid "Reference Entry"
+msgstr "Item de Referência"
 
 #: stylesheets/l10n.xml.in.h:57
-msgid "Table"
-msgstr ""
+msgid "Reference Section"
+msgstr "Seção de Referência"
 
 #: stylesheets/l10n.xml.in.h:58
-#, fuzzy
+msgid "Revision History"
+msgstr "Histórico de Revisão"
+
+#: stylesheets/l10n.xml.in.h:60
+msgid "See"
+msgstr "Veja"
+
+#: stylesheets/l10n.xml.in.h:61
+msgid "See Also"
+msgstr "Veja Também"
+
+#: stylesheets/l10n.xml.in.h:62
+msgid "Set Index"
+msgstr "Inserir Índice"
+
+#: stylesheets/l10n.xml.in.h:63
+msgid "Table"
+msgstr "Tabela"
+
+#: stylesheets/l10n.xml.in.h:64
 msgid "Table of Contents"
 msgstr "Conteúdo da Ajuda"
 
-#: stylesheets/l10n.xml.in.h:59
+#: stylesheets/l10n.xml.in.h:65
 msgid "Tip"
-msgstr ""
+msgstr "Dica"
 
-#: stylesheets/l10n.xml.in.h:60
+#: stylesheets/l10n.xml.in.h:66
 msgid "Title"
-msgstr ""
+msgstr "Título"
 
-#: stylesheets/l10n.xml.in.h:62
+#: stylesheets/l10n.xml.in.h:68
 msgid "Warning"
-msgstr ""
+msgstr "Aviso"
 
 #: yelp.desktop.in.h:1
 msgid "Get help with GNOME"
@@ -655,63 +654,3 @@ msgstr "Obter ajuda sobre o GNOME"
 #: yelp.desktop.in.h:2
 msgid "Help"
 msgstr "Ajuda"
-
-#~ msgid "The document '%s' does not exist"
-#~ msgstr "O documento '%s' não existe"
-
-#~ msgid "<b>Find text in the document:</b>"
-#~ msgstr "<b>Procurar texto no documento.</b>"
-
-#~ msgid "Automatically _wrap around"
-#~ msgstr "Automaticamente _circundar"
-
-#~ msgid "Find text..."
-#~ msgstr "Encontrar texto..."
-
-#~ msgid "Match _entire word"
-#~ msgstr "Encontrar palavra int_eira"
-
-#~ msgid "_Match upper/lower case"
-#~ msgstr "Considerar _mínusculas/maísculas"
-
-#~ msgid "_Search for:"
-#~ msgstr "_Procurar por:"
-
-#~ msgid "GNOME - Desktop"
-#~ msgstr "GNOME - Ambiente"
-
-#~ msgid "Additional documents"
-#~ msgstr "Documentos adicionais"
-
-#~ msgid "Manual Pages"
-#~ msgstr "Páginas de Manual"
-
-#~ msgid "Info Pages"
-#~ msgstr "Páginas Info"
-
-#~ msgid "Manual pages"
-#~ msgstr "Páginas de manual"
-
-#~ msgid "GNOME is"
-#~ msgstr "GNOME é"
-
-#~ msgid "Free Software"
-#~ msgstr "Software Livre"
-
-#~ msgid "(C)"
-#~ msgstr "©"
-
-#, fuzzy
-#~ msgid "Loading..&nbsp;"
-#~ msgstr "Carregando..."
-
-#, fuzzy
-#~ msgid "Previous"
-#~ msgstr "_Anterior"
-
-#, fuzzy
-#~ msgid "Next"
-#~ msgstr "_Seguinte"
-
-#~ msgid "Search in the index"
-#~ msgstr "Procurar no índice"
