--- a/po/pl.po
+++ b/po/pl.po
@@ -9,14 +9,14 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: yelp\n"
-"POT-Creation-Date: 2004-01-12 18:01-0600\n"
+"Report-Msgid-Bugs-To: \n"
+"POT-Creation-Date: 2004-01-21 14:38+0100\n"
 "PO-Revision-Date: 2003-01-02 02:27+0100\n"
 "Last-Translator: GNOME PL Team <translators@gnome.pl>\n"
 "Language-Team: Polish <translation-team-pl@lists.sourceforge.net>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"Report-Msgid-Bugs-To: \n"
 
 #: data/toc.xml.in.h:1
 msgid "Applets"
@@ -42,7 +42,7 @@ msgstr "Środowiska programistyczne"
 msgid "Development Tools"
 msgstr "Narzędzia programistyczne"
 
-#: data/toc.xml.in.h:7
+#: data/toc.xml.in.h:7 stylesheets/l10n.xml.in.h:35
 msgid "Editors"
 msgstr "Edytory"
 
@@ -138,46 +138,47 @@ msgstr "Yelp"
 msgid "Yelp Factory"
 msgstr "Generator Yelpa"
 
-#: src/yelp-db-pager.c:424
+#: src/yelp-db-pager.c:435 src/yelp-man-pager.c:301
 msgid "No href attribute found on yelp:document"
 msgstr "Nie znaleziono atrybutu href dla yelp:document"
 
-#: src/yelp-db-pager.c:439
+#: src/yelp-db-pager.c:450 src/yelp-man-pager.c:316
 msgid "Out of memory"
 msgstr "Brak pamięci"
 
-#: src/yelp-db-pager.c:616
+#: src/yelp-db-pager.c:627 src/yelp-man-pager.c:370
 msgid "Titlepage"
 msgstr "Strona tytułowa"
 
-#: src/yelp-db-pager.c:618 stylesheets/l10n.xml.in.h:27
+#: src/yelp-db-pager.c:629 stylesheets/l10n.xml.in.h:29
+#: src/yelp-man-pager.c:372
 msgid "Contents"
 msgstr "Zawartość"
 
-#: src/yelp-db-pager.c:636 stylesheets/l10n.xml.in.h:61
+#: src/yelp-db-pager.c:647 stylesheets/l10n.xml.in.h:67
+#: src/yelp-man-pager.c:390
 msgid "Unknown"
 msgstr "Nieznany"
 
 #: src/yelp-error.c:46
-#, fuzzy
 msgid "The selected document could not be opened"
-msgstr "URI dokumentu do przetworzenia"
+msgstr "Nie można otworzyć wybranego dokumentu"
 
 #: src/yelp-error.c:52
 msgid "The selected page could not be found in this document."
-msgstr ""
+msgstr "Nie można odnaleźć wybranej strony w tym dokumencie."
 
 #: src/yelp-error.c:58
 msgid "The table of contents could not be read."
-msgstr ""
+msgstr "Nie można odczytać spisu treści."
 
 #: src/yelp-error.c:64
 msgid "DocBook SGML documents are no longer supported."
-msgstr ""
+msgstr "Dokumenty DocBook SGML nie są już obsługiwane."
 
 #: src/yelp-error.c:70
 msgid "The selected file could not be read."
-msgstr ""
+msgstr "NIe można odczytać wybranego pliku."
 
 #: src/yelp-main.c:94
 msgid "Define which cache directory to use"
@@ -265,11 +266,16 @@ msgstr "URI dokumentu do przetworzenia"
 msgid "YelpTocPager: Pause count is negative."
 msgstr "YelpTocPager: licznik przerw jest ujemny."
 
-#: src/yelp-toc-pager.c:880
+#: src/yelp-toc-pager.c:486
+#, c-format
+msgid "Could not load the OMF file '%s'."
+msgstr "Nie można wczytać pliku OMF \"%s\"."
+
+#: src/yelp-toc-pager.c:892
 msgid "Categories"
 msgstr "Kategorie"
 
-#: src/yelp-toc-pager.c:894
+#: src/yelp-toc-pager.c:906
 msgid "Documents"
 msgstr "Dokumenty"
 
@@ -322,14 +328,12 @@ msgid "/Go/"
 msgstr "/Przejście/"
 
 #: src/yelp-window.c:259
-#, fuzzy
 msgid "/Go/_Previous Page"
-msgstr "/Przejście/_Poprzedni"
+msgstr "/Przejście/_Poprzedna strona"
 
 #: src/yelp-window.c:262
-#, fuzzy
 msgid "/Go/_Next Page"
-msgstr "/Przejście/_Następny"
+msgstr "/Przejście/_Następna strona"
 
 #: src/yelp-window.c:265
 msgid "/Go/_Contents"
@@ -347,7 +351,7 @@ msgstr "/Pomoc/_Informacje o"
 msgid "Help Browser"
 msgstr "Przeglądarka pomocy"
 
-#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:53
+#: src/yelp-window.c:546 stylesheets/l10n.xml.in.h:59
 msgid "Section"
 msgstr "Sekcja"
 
@@ -391,19 +395,19 @@ msgstr "Przeglądarka pomocy dla GNOME"
 
 #: stylesheets/l10n.xml.in.h:1
 msgid "&#8216;"
-msgstr ""
+msgstr "&#8216;"
 
 #: stylesheets/l10n.xml.in.h:2
 msgid "&#8217;"
-msgstr ""
+msgstr "&#8217;"
 
 #: stylesheets/l10n.xml.in.h:3
 msgid "&#8220;"
-msgstr ""
+msgstr "&#8220;"
 
 #: stylesheets/l10n.xml.in.h:4
 msgid "&#8221;"
-msgstr ""
+msgstr "&#8221;"
 
 #: stylesheets/l10n.xml.in.h:5
 msgid "About This Bibliography"
@@ -470,160 +474,178 @@ msgid "Author"
 msgstr "Autor"
 
 #: stylesheets/l10n.xml.in.h:21
-#, fuzzy
+msgid "Authors"
+msgstr "Autorzy"
+
+#: stylesheets/l10n.xml.in.h:22
 msgid "Bibliography"
 msgstr "Bibliografia"
 
-#: stylesheets/l10n.xml.in.h:22
+#: stylesheets/l10n.xml.in.h:23
 msgid "Book"
 msgstr "Książka"
 
-#: stylesheets/l10n.xml.in.h:23
+#: stylesheets/l10n.xml.in.h:24
 msgid "Caution"
 msgstr "Ostrzeżenie"
 
-#: stylesheets/l10n.xml.in.h:24
+#: stylesheets/l10n.xml.in.h:25
 msgid "Chapter"
 msgstr "Rozdział"
 
-#: stylesheets/l10n.xml.in.h:25
+#: stylesheets/l10n.xml.in.h:26
 msgid "Collaborator"
 msgstr "Współpracownik"
 
-#: stylesheets/l10n.xml.in.h:26
+#: stylesheets/l10n.xml.in.h:27
+msgid "Collaborators"
+msgstr "Współpracownicy"
+
+#: stylesheets/l10n.xml.in.h:28
 msgid "Colophon"
 msgstr "Kolofon"
 
-#: stylesheets/l10n.xml.in.h:28
+#: stylesheets/l10n.xml.in.h:30
 msgid "Copyright"
 msgstr "Chroniony prawem autorskim"
 
-#: stylesheets/l10n.xml.in.h:29
+#: stylesheets/l10n.xml.in.h:31
+msgid "Copyrights"
+msgstr "Chroniony prawami autorskimi"
+
+#: stylesheets/l10n.xml.in.h:32
 msgid "Date"
 msgstr "Data"
 
-#: stylesheets/l10n.xml.in.h:30
+#: stylesheets/l10n.xml.in.h:33
 msgid "Dedication"
 msgstr "Dedykacja"
 
-#: stylesheets/l10n.xml.in.h:31
+#: stylesheets/l10n.xml.in.h:34
 msgid "Editor"
 msgstr "Redaktor"
 
-#: stylesheets/l10n.xml.in.h:32
+#: stylesheets/l10n.xml.in.h:36
 msgid "Email"
 msgstr "E-mail"
 
-#: stylesheets/l10n.xml.in.h:33
+#: stylesheets/l10n.xml.in.h:37
 msgid "Example"
 msgstr "Przykład"
 
-#: stylesheets/l10n.xml.in.h:34
+#: stylesheets/l10n.xml.in.h:38
 msgid "Figure"
 msgstr "Figura"
 
-#: stylesheets/l10n.xml.in.h:35
+#: stylesheets/l10n.xml.in.h:39
 msgid "Glossary"
 msgstr "Słownik"
 
-#: stylesheets/l10n.xml.in.h:36
+#: stylesheets/l10n.xml.in.h:40
 msgid "Important"
 msgstr "Ważne"
 
-#: stylesheets/l10n.xml.in.h:37
+#: stylesheets/l10n.xml.in.h:41
 msgid "Index"
 msgstr "Indeks"
 
-#: stylesheets/l10n.xml.in.h:38
+#: stylesheets/l10n.xml.in.h:42
 msgid "Legal Notice"
-msgstr ""
+msgstr "Uwaga prawna"
 
-#: stylesheets/l10n.xml.in.h:39
+#: stylesheets/l10n.xml.in.h:43
 msgid "Level"
 msgstr "Poziom"
 
-#: stylesheets/l10n.xml.in.h:40
-msgid "Message Audience"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:41
-msgid "Message Level"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:42
-msgid "Message Origin"
-msgstr ""
-
-#: stylesheets/l10n.xml.in.h:43
-msgid "Note"
-msgstr ""
-
 #: stylesheets/l10n.xml.in.h:44
-msgid "Origin"
-msgstr ""
+msgid "Message Audience"
+msgstr "Odbiorcy wiadomości"
 
 #: stylesheets/l10n.xml.in.h:45
-msgid "Other Contributor"
-msgstr ""
+msgid "Message Level"
+msgstr "Poziom wiadomości"
 
 #: stylesheets/l10n.xml.in.h:46
-msgid "Part"
-msgstr ""
+msgid "Message Origin"
+msgstr "Źródło wiadomości"
 
 #: stylesheets/l10n.xml.in.h:47
-msgid "Preface"
-msgstr ""
+msgid "Note"
+msgstr "Uwaga"
 
 #: stylesheets/l10n.xml.in.h:48
-msgid "Publisher"
-msgstr ""
+msgid "Origin"
+msgstr "Źródło"
 
 #: stylesheets/l10n.xml.in.h:49
-msgid "Reference"
-msgstr ""
+msgid "Other Contributor"
+msgstr "Inny współpracownik"
 
 #: stylesheets/l10n.xml.in.h:50
-msgid "Reference Entry"
-msgstr ""
+msgid "Other Contributors"
+msgstr "Inni współpracownicy"
 
 #: stylesheets/l10n.xml.in.h:51
-msgid "Reference Section"
-msgstr ""
+msgid "Part"
+msgstr "Część"
 
 #: stylesheets/l10n.xml.in.h:52
-msgid "Revision History"
-msgstr ""
+msgid "Preface"
+msgstr "Wstęp"
+
+#: stylesheets/l10n.xml.in.h:53
+msgid "Publisher"
+msgstr "Wydawca"
 
 #: stylesheets/l10n.xml.in.h:54
+msgid "Publishers"
+msgstr "Wydawcy"
+
+#: stylesheets/l10n.xml.in.h:55
+msgid "Reference"
+msgstr "Odniesienie"
+
+#: stylesheets/l10n.xml.in.h:56
+msgid "Reference Entry"
+msgstr "Pozycja odniesienia"
+
+#: stylesheets/l10n.xml.in.h:57
+msgid "Reference Section"
+msgstr "Rozdział odniesienia"
+
+#: stylesheets/l10n.xml.in.h:58
+msgid "Revision History"
+msgstr "Historia poprawek"
+
+#: stylesheets/l10n.xml.in.h:60
 msgid "See"
 msgstr "Zobacz"
 
-#: stylesheets/l10n.xml.in.h:55
+#: stylesheets/l10n.xml.in.h:61
 msgid "See Also"
 msgstr "Zobacz również"
 
-#: stylesheets/l10n.xml.in.h:56
-#, fuzzy
+#: stylesheets/l10n.xml.in.h:62
 msgid "Set Index"
 msgstr "Indeks"
 
-#: stylesheets/l10n.xml.in.h:57
+#: stylesheets/l10n.xml.in.h:63
 msgid "Table"
-msgstr ""
+msgstr "Tabela"
 
-#: stylesheets/l10n.xml.in.h:58
+#: stylesheets/l10n.xml.in.h:64
 msgid "Table of Contents"
-msgstr "Zawartość"
+msgstr "Spis treści"
 
-#: stylesheets/l10n.xml.in.h:59
+#: stylesheets/l10n.xml.in.h:65
 msgid "Tip"
 msgstr "Podpowiedź"
 
-#: stylesheets/l10n.xml.in.h:60
+#: stylesheets/l10n.xml.in.h:66
 msgid "Title"
 msgstr "Tytuł"
 
-#: stylesheets/l10n.xml.in.h:62
+#: stylesheets/l10n.xml.in.h:68
 msgid "Warning"
 msgstr "Uwaga"
 
